syntax = "proto3";

package com.weatherforecast.grpc;

option java_multiple_files = true;
option java_package = "com.weatherforecast.authservice.grpc";
option java_outer_classname = "AuthServiceProto";


service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse) {}
    rpc Register(RegisterRequest) returns (RegistrationResponse) {}
    rpc UpdateUsername(UpdateUsernameRequest) returns (UpdateResponse) {}
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdateResponse) {}
}


message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message UpdatePasswordRequest {
    string username = 1;
    string old_password = 2;
    string new_password = 3;
}

message UpdateUsernameRequest {
    string old_username = 1;
    string new_username = 2;
}

message AuthResponse {
    bool success = 1;
    string token = 2;
    string expires_at = 3;
}

message RegistrationResponse {
    bool success = 1;
}

message UpdateResponse {
    bool success = 1;
}
